This fixes the problem that ksysguardd did not report any network interfaces when wifi was not present, it should also fix the reverse case where there is only wifi present

Written by:  mlconsultant@hotmail.com
Reviewed and with minor whitespace cleanup

BUG:187979

svn path=/trunk/KDE/kdebase/workspace/; revision=980071